--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
-  {{title}}
+  <a routerLink="/">{{title}}</a>
 </h1>
+<div>
+<a routerLink="/about">About</a> 
+<a routerLink="/submit">Submit Activity</a>
+</div>
+<router-outlet></router-outlet>
